switch CJS to ESM

--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
   },
   "test": {
     "permissions": {
-      "read": ["./z3-built.cjs"]
+      "read": ["./z3-built.js"]
     }
   },
   "imports": {
